# sentinel-ioc

./: .gitignore  CMakeLists.txt  CNAME  README.md  _config.yml  main  sentinel
googletest/: README.md
public/: report.md  sentinel-ioc.puml
sentinel-ioc/: README.md
src/: CMakeLists.txt  QT6_INSTALLATION.md  README.md  build.bat  build.sh  diagnose.sh  ioc_export.csv  main.cpp  main_gui.cpp  run-gui.bat  run-gui.sh
src/CLI/: cli.cpp  cli.hpp
src/IOCAnalyzer/: IOCAnalyzer.cpp  IOCAnalyzer.hpp
src/IOCFactory/: IOCFactory.cpp  IOCFactory.hpp
src/analyzerIOC/: analyzerIOC.cpp  analyzerIOC.hpp
src/cli_enhanced/: enhanced_interface.hpp
src/data/: ioc.csv  iocs.txt
src/debug/: object_script.SentinelGUI.Debug
src/fileManager/: FileManager.cpp  FileManager.hpp  fileManager.cpp  fileManager.hpp  hello.cpp
src/gui/: README.md  addiocdialog.cpp  addiocdialog.h  hackerterminal.cpp  hackerterminal.h  ioctablewidget.cpp  ioctablewidget.h  mainwindow.cpp  mainwindow.h  matrixsplash.cpp  matrixsplash.h  matrixtitle.cpp  matrixtitle.h  matrixwidget.cpp  matrixwidget.h  searchdialog.cpp  searchdialog.h  statisticsdialog.cpp  statisticsdialog.h
src/indicator/: indicator.cpp  indicator.hpp
src/indicatorManager/: indicatorManager.cpp  indicatorManager.hpp  indicatorManager_old.cpp
src/maliciousHash/: maliciousHash.cpp  maliciousHash.hpp
src/maliciousIP/: maliciousIP.cpp  maliciousIP.hpp
src/maliciousURL/: maliciousURL.cpp  maliciousURL.hpp
src/system/: System.cpp  System.hpp
src/utils/: utils.cpp  utils.hpp
tests/: tests_fileManager.cpp  tests_maliciousHash.cpp  tests_maliciousIP.cpp  tests_maliciousURL.cpp  tests_utils.cpp
